# aerial_lidar

./: LICENSE  lightware_parse.py
Datasheets and User Manuals/velodyne lidar datasheets/: HDL32E Software Version 2.0 and Webserver Description_2012-12-04_Rev01.pptx  HDL32E and VLP16 Packet Structure_2014-11-11.pptx  HDL32E and VLP16 Packet Timing.xlsx  VLP Webserver User Interface Screens VLP-16.pptx  VLP16_db.xml  Velodyne LiDAR Puck_VLP16_Outline Drawing.STEP  _Read Me First.txt  vlp16_3.0.23.0_customer_update.flash
LiDAR_Minnow_Board_Files/: 1080display.sh  apm2_blacklist.yaml  apm2_config.yaml  apm2_lidar.launch  apm_config.yaml  apm_lidar.sh  ardu.launch  dump_lidar.sh  fw.sh  minidisplay.sh  run_lidar.sh  swap.sh  view_lidar.sh  vn300.py  vnc.sh
Shell_Scripts/: README.txt  pcd2ply.sh  play_bag_file.sh  play_pcd_files.sh  record_bag_to_pcd.sh  remove_backup.sh  rename_pcd.sh  run_pointcloud_tf.sh  run_rviz.sh  run_static_tf.sh  run_tf.sh
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
catkin_ws/src/laser_tfs/: CMakeLists.txt  package.xml
catkin_ws/src/laser_tfs/launch/: apm2.launch  test_lidar.launch
catkin_ws/src/laser_tfs/src/nodes/: listener_tf.cpp  plot.py  test_broadcaster.py
displayQuatCurve/: imu_plot_final.m  matlab.mat
displayQuatCurve/data/: camp_flight3_imu_data.xlsx  gps_imu_1.txt  gps_imu_2.txt  gps_imu_3.txt  test_data_1.xlsx  test_data_2.xlsx
displayQuatCurve/test_files/: displayQuatCurve.m  gps_test_1.m  imu_plot_test_1.m  (+3 more)
tuto-pairwise/: CMakeCache.txt  CMakeLists.txt  Makefile  README.txt  cmake_install.cmake
(+69 files in other folders)
